--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/react": "^17.0.20",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "next": "^11.1.2",
-    "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.40.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
