10162021 HttpOnly cookies, create user, added dev/prod tooling, qs for login-micro

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 #ignored for code reviews, commented for production branch
-#build
+build
 #ignored for code reviews, commented for production branch
-#.next
+.next
 .idea
