--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
     "@types/react": "^17.0.20",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
